src/core-crm/objects/Mobile_Country_Code__mdt/Mobile_Country_Code__mdt.object-meta.xml
<CustomObject>
    <label>Mobile Country Code Mapping</label>
    <pluralLabel>Mobile Country Code Mapping</pluralLabel>
</CustomObject>