src/core-crm/objects/Mobile_Country_Code__mdt/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>