src/core-crm/objects/Mobile_Country_Code__mdt/fields/Loqate_Locale__c.field-meta.xml
<CustomField>
    <fullName>Loqate_Locale__c</fullName>
    <label>Loqate Locale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>