src/core-crm/objects/Mobile_Country_Code__mdt/fields/Mobile_Coutnry_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Coutnry_Code__c</fullName>
    <label>Mobile Country Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>